# p4tui

./: .gitignore  Cargo.toml  README.md
asyncp4/: Cargo.toml
asyncp4/src/: error.rs  lib.rs
asyncp4/src/asyncjob/: mod.rs
asyncp4/src/sync/: change.rs  diff.rs  file.rs  mod.rs
src/: app.rs  args.rs  commandbar.rs  input.rs  main.rs  notify_mutex.rs  strings.rs  tabbar.rs  version.rs
src/components/: changelist.rs  command.rs  diff.rs  filelist.rs  help.rs  mod.rs
src/components/utils/: mod.rs  scroll_vertical.rs
src/keys/: key_config.rs  key_list.rs  symbols.rs
src/tabs/: mod.rs  pending.rs  submitted.rs
src/ui/: mod.rs  scrollbar.rs  style.rs
