[package]
name = "asyncp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.44"
rayon-core = "1.11"
log = "0.4.19"
regex = "1.9.1"

[dev-dependencies]
env_logger = "0.10"
pretty_assertions = "1.4"
